# OpenTwig

./: .gitignore  Package.swift  README.md  compass_artifact_wf-296b6a06-c840-40fe-aeac-66945b88e057_text_markdown.md  index.html  package-lock.json  package.json  vite.config.ts
OpenTwig/App/: OpenTwigApp.swift
OpenTwig/Models/: AISuggestion.swift  ActivityEvent.swift  AppState.swift  Citation.swift  Document.swift  GitTypes.swift  Project.swift  ProjectMember.swift
OpenTwig/Resources/: Credits.rtf
OpenTwig/Services/: ProjectService.swift
OpenTwig/Services/AI/: AIConfiguration.swift  AIMergeService.swift
OpenTwig/Services/Citations/: CitationService.swift
OpenTwig/Services/Export/: ExportService.swift
OpenTwig/Utilities/: DateFormatting.swift  KeychainHelper.swift  MarkdownParser.swift  ProcessRunner.swift
OpenTwig/ViewModels/: CitationViewModel.swift  DiffViewModel.swift  EditorViewModel.swift  GitViewModel.swift  ProjectViewModel.swift
OpenTwig/Views/: ContentView.swift
docs/: lab-repo-prompt.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  document.rs  git.rs  git_server.rs  mod.rs  project.rs
src-tauri/src/models/: document.rs  git_server.rs  git_types.rs  mod.rs  project.rs
src-tauri/src/storage/: credentials.rs  database.rs  mod.rs
src/components/: Button.tsx  Divider.tsx  Field.tsx
src/lib/: tauri.ts
src/routes/: DemoView.tsx  MainShell.tsx
src/store/: index.ts
src/styles/: globals.css
(+35 files in other folders)
