[package]
name = "opentwig"
version = "0.1.0"
description = "Git-backed academic collaboration platform"
authors = ["Tachyon Labs"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "opentwig_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2", "vendored-openssl"] }
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = "3.6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.41", features = ["full"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
url = "2.5"

[features]
custom-protocol = ["tauri/custom-protocol"]
